home width overflow fix

--- a/src/client/scss/_home.scss
+++ b/src/client/scss/_home.scss
@@ -70,12 +70,13 @@
 }
 
 .home__data {
-    width: 100%;
+    //width: 100%;
     height: calc(100vh - var(--header-height));
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: var(--mb-1);
+
 }
 
 .home__description {
